# livekit-cxx-sdk

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  generate-proto.sh
include/abc/: reference_counter.h  reference_counter_decl.h  reference_counter_fwd_decl.h  threadsafe_queue.h  threadsafe_queue_decl.h  threadsafe_queue_fwd_decl.h
include/livekit/: e2ee.h  e2ee_decl.h  e2ee_fwd_decl.h  rtc_config_fwd_decl.h
include/livekit/details/: livekit_ffi.h  livekit_ffi_decl.h  livekit_ffi_fwd_decl.h
include/livekit/ffi/: ffi_client.h  ffi_client_decl.h  ffi_client_fwd_decl.h  ffi_handle.h  ffi_handle_decl.h  ffi_handle_fwd_decl.h  ffi_queue.h  ffi_queue_decl.h  ffi_queue_fwd_decl.h
include/livekit/ffi/details/: livekit_ffi.h
include/livekit/ffi/proto/: audio_frame.pb.h  e2ee.pb.h  ffi.pb.h  handle.pb.h  livekit_agent.pb.h  livekit_agent_dispatch.pb.h  livekit_egress.pb.h  livekit_ingress.pb.h  livekit_metrics.pb.h  livekit_models.pb.h  livekit_room.pb.h  livekit_rtc.pb.h  livekit_sip.pb.h  livekit_webhook.pb.h  participant.pb.h  room.pb.h  rpc.pb.h  stats.pb.h  track.pb.h  track_publication.pb.h  video_frame.pb.h
include/livekit/rtc/: ffi_client_decl.h  ffi_client_fwd_decl.h  room.cpp  room.h  room_decl.h  room_fwd_decl.h
src/: CMakeLists.txt  reference_counter.cpp  room.cpp
src/ffi/: CMakeLists.txt  ffi_client.cpp  ffi_handle.cpp
src/ffi/proto/: CMakeLists.txt  audio_frame.pb.cc  e2ee.pb.cc  ffi.pb.cc  handle.pb.cc  livekit_agent.pb.cc  livekit_agent_dispatch.pb.cc  livekit_egress.pb.cc  livekit_ingress.pb.cc  livekit_metrics.pb.cc  livekit_models.pb.cc  livekit_room.pb.cc  livekit_rtc.pb.cc  livekit_sip.pb.cc  livekit_webhook.pb.cc  participant.pb.cc  room.pb.cc  rpc.pb.cc  stats.pb.cc  track.pb.cc  track_publication.pb.cc  video_frame.pb.cc
tests/: CMakeLists.txt
tests/abc/: reference_counter.cpp
